XmlHandlerHelper: fixed bug in type recognition